--- a/src/gallery.html
+++ b/src/gallery.html
@@ -4,21 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-js-hw-09</title>
+    <title>Gallery</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/gallery.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
     <section>
-      <h1>goit-js-hw-09</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
+      <a href="../index.html">Go to home</a>
     </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
-    <script type="module" src="./main.js"></script>
+    <section>
+      <ul class="gallery"></ul>
+    </section>
+    <script type="module" src="./partials/gallery.js"></script>
   </body>
 </html>
