--- a/src/feedback.html
+++ b/src/feedback.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <section>
-      <a href="../index.html">Go to home</a>
+      <a href="./index.html">Go to home</a>
     </section>
     <section class="form">
       <form class="feedback-form" autocomplete="off">
