--- a/src/gallery.html
+++ b/src/gallery.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <section>
-      <a href="../index.html">Go to home</a>
+      <a href="./index.html">Go to home</a>
     </section>
     <section>
       <ul class="gallery"></ul>
